objects/analyticscc__Measure_Requirements__c.object
<CustomObject>
    <fields>
        <fullName>analyticscc__Dashboard_Automation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dashboard Automation</label>
        <referenceTo>analyticscc__Dashboard_Automation__c</referenceTo>
        <relationshipLabel>Measure Requirements</relationshipLabel>
        <relationshipName>Measure_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>analyticscc__Field_1__c</fullName>
        <label>Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Field_2__c</fullName>
        <label>Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Field_3__c</fullName>
        <label>Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Measure_Number__c</fullName>
        <label>Measure Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>analyticscc__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Value_1__c</fullName>
        <label>Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Value_2__c</fullName>
        <label>Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Value_3__c</fullName>
        <label>Value 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Measure Requirements</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Measure Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>